--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ body{
 }
 .component{
   height: auto;
-  background-color: #ffffff;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 10px 10px;
@@ -77,14 +76,15 @@ body{
 }
 
 .sidePanel{
-  width: 400px;
   height: 436px;
   background-color: #2A3047;
   color: white;
-  padding: 30px 50px;
+  border-radius: 10px;
 }
 
-
+.maplibregl-ctrl{
+  display: none;
+}
 .location{
   color:grey;
 }
@@ -104,4 +104,10 @@ body{
   display: inline-flex;
   color: #5876C5;
   font-size: 20px;
+}
+.text-posted{
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 25px;
+  color: rgba(56, 65, 93, 0.602109);
 }
